--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,8 +20,8 @@ body {
   display: inline-block;
   font-size: 48px;
 }
-/* shorten from .header h1 .seo to just .seo */
-.seo {
+/* shorten from .header h1 .seo to just #seo */
+#seo {
   color: #d9dcd6;
 }
 /* div to nav */
@@ -55,7 +55,8 @@ p {
   height: 800px;
   width: 100%;
   margin-bottom: 25px;
-  background-image: url("../images/digital-marketing-meeting.jpg");
+  /* background-image: url(../images/digital-marketing-meeting.jpg);
+    move to index.html for adding alt text beacause I believe it means something to on the web page*/
   background-size: cover;
   background-position: center;
 }
